Kubernetes/Homepage/yamls/ig-homepage.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: traefik-homepage-https-redirect
  namespace: homepage
spec:
  redirectScheme:
    scheme: https
    permanent: true
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: traefik-homepage-security
  namespace: homepage
spec:
  headers:
    frameDeny: true
    sslRedirect: true
    browserXssFilter: true
    contentTypeNosniff: true
    stsIncludeSubdomains: true
    stsPreload: true
    stsSeconds: 31536000
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-homepage-websecure
  namespace: homepage 
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`homepage.domain.com`)
      services:
        - name: homepage
          port: 3000
            #          serversTransport: traefik-homepage-transport
      middlewares:
        - name: traefik-homepage-security
  tls:
    secretName: homepage-domain-com
    options:
      name: traefik-homepage-tlsoptions
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-homepage-web
  namespace: homepage
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`homepage.domain.com`)
      services:
        - name: homepage
          port: 3000 
      middlewares:
        - name: traefik-homepage-https-redirect
